# 1WinBot

./: .gitignore  README.md  pyproject.toml  requirements.txt
bot/config/: config.py
bot/core/: headers.py  tapper.py
bot/utils/: launcher.py
