[project]
name = "1winbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.15",
    "aiohttp-proxy>=0.1.2",
    "better-proxy>=1.3.1",
    "fake-useragent>=2.1.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.1",
    "pyrogram>=2.0.106",
    "tgcrypto>=1.2.5",
]
